# Atlas-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
backend/app/: config.py  main.py
backend/app/api/: routes_chat.py  routes_chat_langchain.py  routes_docs.py  routes_summarize.py
backend/app/core/: embeddings.py  llm.py  prompts.py
backend/app/evaluation/: ablation.py  compare_baseline.py  metrics.py  retrievers.py  test_queries.py  utils.py
backend/app/ingestion/: chunking.py  cleaning.py  entities.py  indexing.py  pdf_loader.py  pipeline.py
backend/app/memory/: conversation.py  query_rewriter.py
backend/app/models/: api.py  ingestion.py  retrieval.py  schemas.py
backend/app/retrieval/: chunk_registry.py  citation_filter.py  graph_utils.py  hybrid.py  keyword_index.py  langchain_retriever.py  normalize.py  rag.py  reranker.py  retrieve.py  vector_store.py
backend/app/summarization/: langchain_summarizer.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/pages/: index.tsx
