[project]
name = "atlasrag-backend"
version = "0.0.0"
description = "Backend for AtlasRAG - multi-document research assistant."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "backend"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
